--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "compress-pdf": "^0.5.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "multer": "^1.4.5-lts.1",
