--- a/package.json
+++ b/package.json
@@ -11,15 +11,25 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "axios": "^1.8.3",
+    "bootstrap": "^5.3.3",
     "compress-pdf": "^0.5.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
+    "jquery": "^3.7.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.9",
     "sanitize-filename": "^1.6.3",
     "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "laravel-mix": "^6.0.49",
+    "nodemon": "^3.1.9",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.85.1",
+    "sass-loader": "^12.6.0"
   }
 }
